--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -12,9 +12,7 @@
         {
             "customType": "regex",
             "versioningTemplate": "{{#if versioning}}{{versioning}}{{else}}semver{{/if}}",
-            "fileMatch": [
-                "Makefile"
-            ],
+            "managerFilePatterns": null,
             "matchStrings": [
                 "# renovate: datasource=(?<datasource>.*?)(?:\\s+extractVersion=(?<extractVersion>.+?))?\\s+depName=(?<depName>.+?)\\s.*_VERSION\\s+\\?=\\s+(?<currentValue>.+)"
             ]
@@ -22,9 +20,7 @@
         {
             "customType": "regex",
             "versioningTemplate": "{{#if versioning}}{{versioning}}{{else}}semver{{/if}}",
-            "fileMatch": [
-                "pkg/machinery/constants/constants.go"
-            ],
+            "managerFilePatterns": null,
             "matchStrings": [
                 "\\/\\/\\s+renovate: datasource=(?<datasource>.*?)(?:\\s+extractVersion=(?<extractVersion>.+?))?(?:\\s+versioning=(?<versioning>.+?))?\\s+depName=(?<depName>.+?)?\\s.*Version\\s+=\\s+\\\"(?<currentValue>.+?)\\\""
             ]
@@ -32,9 +28,7 @@
         {
             "customType": "regex",
             "versioningTemplate": "{{#if versioning}}{{versioning}}{{else}}semver{{/if}}",
-            "fileMatch": [
-                "internal/integration/k8s/constants.go"
-            ],
+            "managerFilePatterns": null,
             "matchStrings": [
                 "\\/\\/\\s+renovate: datasource=(?<datasource>.*?)(?:\\s+extractVersion=(?<extractVersion>.+?))?(?:\\s+versioning=(?<versioning>.+?))?\\s+depName=(?<depName>.+?)?(?:\\s+registryUrl=(?<registryUrl>.+?))?\\s.*Version\\s+=\\s+\\\"(?<currentValue>.+?)\\\""
             ]
@@ -44,9 +38,7 @@
             "datasourceTemplate": "docker",
             "depNameTemplate": "docker/dockerfile-upstream",
             "versioningTemplate": "docker",
-            "fileMatch": [
-                "Dockerfile"
-            ],
+            "managerFilePatterns": null,
             "matchStrings": [
                 "# syntax = docker\\/dockerfile-upstream:(?<currentValue>.*)"
             ]
