--- a/hack/release.toml
+++ b/hack/release.toml
@@ -18,10 +18,11 @@ preface = """
     [notes.updates]
         title = "Component Updates"
         description = """\
-Linux: 6.12.30
+Linux: 6.12.31
 Kubernetes: 1.33.1
 runc: 1.3.0
 containerd: 2.1.1
+Flannel CNI plugin: 1.7.1-flannel1
 
 Talos is built with Go 1.24.3.
 """
