--- a/.kres.yaml
+++ b/.kres.yaml
@@ -316,6 +316,7 @@ spec:
         - '30 3 * * *'
       triggerLabels:
         - integration/qemu
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -370,6 +371,7 @@ spec:
         - '30 3 * * *'
       triggerLabels:
         - integration/qemu-enforcing
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -440,6 +442,7 @@ spec:
         - '30 4 * * *'
       triggerLabels:
         - integration/conformance
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -562,6 +565,7 @@ spec:
         - '30 3 * * *'
       triggerLabels:
         - integration/trusted-boot
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -710,6 +714,7 @@ spec:
       triggerLabels:
         - integration/provision
         - integration/provision-0
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -773,6 +778,7 @@ spec:
       triggerLabels:
         - integration/provision
         - integration/provision-1
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -824,6 +830,7 @@ spec:
       triggerLabels:
         - integration/provision
         - integration/provision-2
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -875,6 +882,7 @@ spec:
       triggerLabels:
         - integration/misc
         - integration/misc-0
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -960,6 +968,7 @@ spec:
       triggerLabels:
         - integration/misc
         - integration/misc-1
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -1050,6 +1059,7 @@ spec:
       triggerLabels:
         - integration/misc-enforcing
         - integration/misc-1-enforcing
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -1156,6 +1166,7 @@ spec:
       triggerLabels:
         - integration/misc
         - integration/misc-2
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -1278,6 +1289,7 @@ spec:
       triggerLabels:
         - integration/misc
         - integration/misc-3
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -1438,6 +1450,7 @@ spec:
       triggerLabels:
         - integration/misc
         - integration/misc-4
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -1526,6 +1539,7 @@ spec:
       triggerLabels:
         - integration/misc-enforcing
         - integration/misc-4-enforcing
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -1638,6 +1652,7 @@ spec:
         - '30 6 * * *'
       triggerLabels:
         - integration/extensions
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -1721,6 +1736,7 @@ spec:
         - '30 3 * * *'
       triggerLabels:
         - integration/cilium
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -1801,6 +1817,7 @@ spec:
         - '30 3 * * *'
       triggerLabels:
         - integration/qemu-encrypted-vip
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -1856,6 +1873,7 @@ spec:
         - '30 3 * * *'
       triggerLabels:
         - integration/qemu-race
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -1922,6 +1940,7 @@ spec:
       triggerLabels:
         - integration/qemu-csi
         - integration/qemu-csi-rook-ceph
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -1989,6 +2008,7 @@ spec:
         - integration/qemu-csi
         - integration/extensions # since iscsi is tested with longhorn
         - integration/qemu-csi-longhorn
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -2083,6 +2103,7 @@ spec:
       triggerLabels:
         - integration/qemu-csi
         - integration/qemu-csi-openebs
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -2149,6 +2170,7 @@ spec:
         - '30 2 * * *'
       triggerLabels:
         - integration/images
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -2187,6 +2209,7 @@ spec:
         - '30 2 * * *'
       triggerLabels:
         - integration/reproducibility-test
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -2248,6 +2271,7 @@ spec:
         - '30 2 * * *'
       triggerLabels:
         - integration/image-cache
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -2445,6 +2469,7 @@ spec:
         - '30 7 * * *'
       triggerLabels:
         - integration/aws
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -2712,6 +2737,7 @@ spec:
         - '30 7 * * *'
       triggerLabels:
         - integration/gcp
+        - integration/release-gate
       steps:
         - name: download-artifacts
           conditions:
@@ -2774,25 +2800,25 @@ kind: common.Renovate
 spec:
   customManagers:
     - customType: regex
-      fileMatch:
+      managerFilePatterns:
         - Makefile
       matchStrings:
         - '# renovate: datasource=(?<datasource>.*?)(?:\s+extractVersion=(?<extractVersion>.+?))?\s+depName=(?<depName>.+?)\s.*_VERSION\s+\?=\s+(?<currentValue>.+)'
       versioningTemplate: "{{#if versioning}}{{versioning}}{{else}}semver{{/if}}"
     - customType: regex
-      fileMatch:
+      managerFilePatterns:
         - pkg/machinery/constants/constants.go
       matchStrings:
         - '\/\/\s+renovate: datasource=(?<datasource>.*?)(?:\s+extractVersion=(?<extractVersion>.+?))?(?:\s+versioning=(?<versioning>.+?))?\s+depName=(?<depName>.+?)?\s.*Version\s+=\s+\"(?<currentValue>.+?)\"'
       versioningTemplate: "{{#if versioning}}{{versioning}}{{else}}semver{{/if}}"
     - customType: regex
-      fileMatch:
+      managerFilePatterns:
         - internal/integration/k8s/constants.go
       matchStrings:
         - '\/\/\s+renovate: datasource=(?<datasource>.*?)(?:\s+extractVersion=(?<extractVersion>.+?))?(?:\s+versioning=(?<versioning>.+?))?\s+depName=(?<depName>.+?)?(?:\s+registryUrl=(?<registryUrl>.+?))?\s.*Version\s+=\s+\"(?<currentValue>.+?)\"'
       versioningTemplate: "{{#if versioning}}{{versioning}}{{else}}semver{{/if}}"
     - customType: regex
-      fileMatch:
+      managerFilePatterns:
         - Dockerfile
       matchStrings:
         - '# syntax = docker\/dockerfile-upstream:(?<currentValue>.*)'
