--- a/hack/release.toml
+++ b/hack/release.toml
@@ -23,6 +23,7 @@ Kubernetes: 1.33.1
 runc: 1.3.0
 containerd: 2.1.1
 Flannel CNI plugin: 1.7.1-flannel1
+Flannel: 0.27.0
 
 Talos is built with Go 1.24.3.
 """
