feat: implement zswap support
Zswap allows to compress pages in memory before they hit the actual swap
device.

Both swap and zswap (or either one of these) can be enabled.

Fixes #10675

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/cmd/talosctl/cmd/talos/cgroupsprinter/presets/swap.yaml
+++ b/cmd/talosctl/cmd/talos/cgroupsprinter/presets/swap.yaml
@@ -7,3 +7,9 @@ columns:
     template: '{{ .MemorySwapHigh.HumanizeIBytes | printf "%8s" }}'
   - name: SwapMax
     template: '{{ .MemorySwapMax.HumanizeIBytes | printf "%8s" }}'
+  - name: ZswapCurrent
+    template: '{{ .MemoryZswapCurrent.HumanizeIBytes | printf "%8s" }}'
+  - name: ZswapMax
+    template: '{{ .MemoryZswapMax.HumanizeIBytes | printf "%8s" }}'
+  - name: ZswapWriteback
+    template: '{{ .MemoryZswapWriteback }}'
