--- a/hack/test/patches/ephemeral-nvme.yaml
+++ b/hack/test/patches/ephemeral-nvme.yaml
@@ -21,3 +21,8 @@ machine:
     extraConfig:
       memorySwap:
         swapBehavior: LimitedSwap
+---
+apiVersion: v1alpha1
+kind: ZswapConfig
+maxPoolPercent: 25
+shrinkerEnabled: true
