fix: set default MTU on Azure to 1400
Azure documentation is very confusing, but the tests and the issues we
observed show that 1400 is a more safe default than 1500, reducing
packet fragmentation and timeouts.

See e.g. https://www.reddit.com/r/networking/comments/puowuy/do_anyone_know_the_default_tcp_mss_between_two/

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -54,6 +54,13 @@ This feature can be enable by using [SwapVolumeConfig](https://www.talos.dev/v1.
 Talos VMWare platform now supports `arm64` architecture in addition to `amd64`.
 """
 
+    [notes.azure]
+        title = "Azure"
+        description = """\
+Talos on Azure now defaults to MTU of 1400 bytes for the `eth0` interface to avoid packet fragmentation issues.
+The default MTU can be overriden with machine configuration.
+"""
+
 [make_deps]
 
     [make_deps.tools]
