fix: set default MTU on Azure to 1400
Azure documentation is very confusing, but the tests and the issues we
observed show that 1400 is a more safe default than 1500, reducing
packet fragmentation and timeouts.

See e.g. https://www.reddit.com/r/networking/comments/puowuy/do_anyone_know_the_default_tcp_mss_between_two/

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>
(cherry picked from commit 6c7f8201a9ceeec6ecfd0a35b308805ec149f3de)

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -7,7 +7,7 @@ match_deps = "^github.com/((talos-systems|siderolabs)/[a-zA-Z0-9-]+)$"
 ignore_deps = ["github.com/coredns/coredns"]
 
 # previous release
-previous = "v1.10.3"
+previous = "v1.10.4"
 
 pre_release = false
 
@@ -19,9 +19,15 @@ preface = """
     [notes.updates]
         title = "Component Updates"
         description = """
-Linux: 6.12.31
 
 Talos is built with Go 1.24.4.
+"""
+
+    [notes.azure]
+        title = "Azure"
+        description = """\
+Talos on Azure now defaults to MTU of 1400 bytes for the `eth0` interface to avoid packet fragmentation issues.
+The default MTU can be overriden with machine configuration.
 """
 
 [make_deps]
