feat: update Linux to 6.12.35
Update via https://github.com/siderolabs/pkgs/pull/1269

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>
(cherry picked from commit 19d94c3574b7b3ee3fbe21fdb56cff5a18e7b91e)

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -18,7 +18,8 @@ preface = """
 
     [notes.updates]
         title = "Component Updates"
-        description = """
+        description = """\
+Linux: 6.12.35
 
 Talos is built with Go 1.24.4.
 """
